# bazelpybind11

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  basic_test.py  example.cpp  test_binding.py
tools/: bazel
