load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

pybind_extension(
    name = "example",
    srcs = ["binding.cpp"],
    visibility = ["//visibility:public"],
    deps = [],
)
py_library(
    name = "add_py_lib",
    srcs = glob(["**/*.py"]),
    data = [
        "example.so",
    ],
    imports = [".",":example"],
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
)
py_test(
    name = "add_py",
    srcs = ["test_binding.py"],
    main = "test_binding.py",
    python_version = "PY3",
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        ":add_py_lib",
        ":example.so"
    ],
)
