load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

load("@rules_python//python:defs.bzl", "py_library", "py_test")

pybind_extension(
    name = "basic",
    srcs = ["example.cpp"],
)
py_library(
    name = "example_lib",
    data = [":basic"],
    imports = ["."],
)
py_test(
    name = "basic_test",
    srcs = ["basic_test.py"],
    deps = [":example_lib"],
)

